--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y make gcc libreadline-dev
+          sudo apt-get install -y make gcc libreadline-dev valgrind
 
       - name: Build project
         run: make
